--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/image0.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Duval Property Services - Professional lawn care, pressure washing, and softwashing services in Jacksonville and Duval County, Florida. Residential & commercial property maintenance." />
-    <meta name="keywords" content="lawn care Jacksonville, pressure washing Jacksonville, softwashing, Duval County property services, Jacksonville lawn service" />
+    <meta name="description" content="Duval Property Services - Professional lawn care, pressure washing, and softwashing services in Jacksonville, Florida. Residential & commercial property maintenance." />
+    <meta name="keywords" content="lawn care Jacksonville, pressure washing Jacksonville, softwashing, Jacksonville property services, Jacksonville lawn service" />
     <title>Duval Property Services | Lawn Care & Pressure Washing Jacksonville FL</title>
   </head>
   <body>
