--- a/index.html
+++ b/index.html
@@ -2,11 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/image0.jpeg" />
+    <link rel="icon" type="image/jpeg" href="/att.xpvixb5gxtviuiqfainsv-8emnocqu0fszybazeinqo.png.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Duval Property Services - Professional lawn care, pressure washing, and softwashing services in Jacksonville, Florida. Residential & commercial property maintenance." />
-    <meta name="keywords" content="lawn care Jacksonville, pressure washing Jacksonville, softwashing, Jacksonville property services, Jacksonville lawn service" />
-    <title>Duval Property Services | Lawn Care & Pressure Washing Jacksonville FL</title>
+    <meta name="description" content="DUVAL Property Services - Professional lawn care, pressure washing, and softwashing services in Jacksonville, Florida. Residential & commercial property maintenance with free estimates." />
+    <meta name="keywords" content="lawn care Jacksonville, pressure washing Jacksonville, softwashing, Jacksonville property services, Jacksonville lawn service, Duval County" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="DUVAL Property Services | Jacksonville's Premier Lawn Care & Pressure Washing" />
+    <meta property="og:description" content="Professional lawn care, pressure washing, and softwashing services in Jacksonville, FL. Residential & Commercial. Free Estimates!" />
+    <meta property="og:image" content="/att.xpvixb5gxtviuiqfainsv-8emnocqu0fszybazeinqo.png.jpeg" />
+    <meta property="og:url" content="https://duvalpropertyservices.com" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="DUVAL Property Services | Jacksonville Lawn Care & Pressure Washing" />
+    <meta name="twitter:description" content="Professional lawn care, pressure washing, and softwashing in Jacksonville, FL. Free Estimates!" />
+    <meta name="twitter:image" content="/att.xpvixb5gxtviuiqfainsv-8emnocqu0fszybazeinqo.png.jpeg" />
+
+    <title>DUVAL Property Services | Lawn Care & Pressure Washing Jacksonville FL</title>
   </head>
   <body>
     <div id="root"></div>
